# SpaceSim

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json
Source/: Application.cpp  Application.hpp  Body.cpp  Body.hpp  Camera.cpp  Camera.hpp  Main.cpp  Position.cpp  Position.hpp  Settings.cpp  Settings.hpp  SolarSystem.cpp  SolarSystem.hpp  Spawner.cpp  Spawner.hpp  Vector2.cpp  Vector2.hpp  Velocity.cpp  Velocity.hpp
